Criando a pesquisa específica por categoria

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                             <a id="">Categorias</a>
                             <div id="categorias">
                                 <ul>
-                                    <li><a href="">Eletrônicos</a></li>
-                                    <li><a href="">Roupas Femininas</a></li>
-                                    <li><a href="">Roupas Masculinas</a></li>
-                                    <li><a href="">Jóias</a></li>
+                                    <li><a href="#" class="categoryTypeSpecify" data-identificador="electronics">Eletrônicos</a></li>
+                                    <li><a href="#" class="categoryTypeSpecify" data-identificador="women's clothing">Roupas Femininas</a></li>
+                                    <li><a href="#" class="categoryTypeSpecify" data-identificador="mens's clothing">Roupas Masculinas</a></li>
+                                    <li><a href="#" class="categoryTypeSpecify" data-identificador="jewelery">Jóias</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -50,6 +50,7 @@
                         <p class="p-preco">R$ XXXX</p>
                         <!--produtos
                     </div> -->
+                    <h4 class="siteCarregando">Carregando...</h4>
                 </section>
             </article>
             <article id="secaoRoupasFem">
@@ -61,6 +62,7 @@
                         <p class="p-preco">R$ XXXX</p>
                         <!--produtos
                     </div> -->
+                    <h4 class="siteCarregando">Carregando...</h4>
                 </section>
             </article>
             <article id="secaoRoupasMasc">
@@ -72,6 +74,7 @@
                         <p class="p-preco">R$ XXXX</p>
                         <!--produtos
                     </div> -->
+                    <h4 class="siteCarregando">Carregando...</h4>
                 </section>
             </article>
             <article id="secaoJoias">
@@ -83,6 +86,7 @@
                         <p class="p-preco">R$ XXXX</p>
                         <!--produtos
                     </div> -->
+                    <h4 class="siteCarregando">Carregando...</h4>
                 </section>
             </article>
         </main> 
