Adicinada busca por categoria de produto específica

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                         menu
                         </span>
                     <div id="opcoes">
-                        <a href="index.html" id="a_produtos">Produtos</a>
+                        <a href="index.html" id="a_produtos" class="ativarHover">Produtos</a>
                         <div id="linkCategorias">
-                            <a id="">Categorias</a>
+                            <a id="" class="hover_link">Categorias</a>
                             <div id="categorias">
                                 <ul>
                                     <li><a href="#" class="categoryTypeSpecify" data-identificador="electronics">Eletrônicos</a></li>
                                     <li><a href="#" class="categoryTypeSpecify" data-identificador="women's clothing">Roupas Femininas</a></li>
-                                    <li><a href="#" class="categoryTypeSpecify" data-identificador="mens's clothing">Roupas Masculinas</a></li>
+                                    <li><a href="#" class="categoryTypeSpecify" data-identificador="men's clothing">Roupas Masculinas</a></li>
                                     <li><a href="#" class="categoryTypeSpecify" data-identificador="jewelery">Jóias</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <a href="sobre.html">Sobre</a>
+                        <a href="sobre.html" class="hover_A">Sobre</a>
                     </div>
                 </nav>
                 <div id="btnLogin">
@@ -40,8 +40,8 @@
                 </div>
             </div>
         </header>
-        <main>
-            <article id="secaoEletronicos">
+        <main id="main">
+            <article id="secaoEletronicos" class="articles_desativar">
                 <h2>Eletrônicos</h2>
                 <section id="eletronicos" class="secao-produtos eletronicos">
                     <!-- <div class="produto">
@@ -53,7 +53,7 @@
                     <h4 class="siteCarregando">Carregando...</h4>
                 </section>
             </article>
-            <article id="secaoRoupasFem">
+            <article id="secaoRoupasFem" class="articles_desativar">
                 <h2>Roupas Femininas</h2>
                 <section id="roupasfemininas" class="secao-produtos roupasfemininas">
                     <!-- <div class="produto">
@@ -65,7 +65,7 @@
                     <h4 class="siteCarregando">Carregando...</h4>
                 </section>
             </article>
-            <article id="secaoRoupasMasc">
+            <article id="secaoRoupasMasc" class="articles_desativar">
                 <h2>Roupas Masculinas</h2>
                 <section id="roupasmasculinas" class="secao-produtos roupasmasculinas">
                     <!-- <div class="produto">
@@ -77,7 +77,7 @@
                     <h4 class="siteCarregando">Carregando...</h4>
                 </section>
             </article>
-            <article id="secaoJoias">
+            <article id="secaoJoias" class="articles_desativar">
                 <h2>Jóias</h2>
                 <section id="joias" class="secao-produtos joias">
                     <!-- <div class="produto">
