Página de login criada

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
                         <a href="sobre.html" class="hover_A">Sobre</a>
                     </div>
                 </nav>
+                <!-- <div id="pesquisar">
+                    <input type="text" name="inputPesquisar" id="inputPesquisar">
+                </div> --> <!--Adicionar pesquisar de produto-->
                 <div id="btnLogin">
-                    <img src="img/icone-usuario.png" alt="Usuário">
+                    <img src="img/icone-usuario.png" alt="Usuário" id="paginaLogin">
                 </div>
             </div>
         </header>
@@ -93,5 +96,6 @@
     </section>
     <script src="js/animacoespag.js"></script>
     <script src="js/script.js"></script>
+    <script src=""></script>
 </body>
 </html>
