Adicionando alguns ajustes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <input type="text" name="inputPesquisar" id="inputPesquisar">
                 </div> --> <!--Adicionar pesquisar de produto-->
                 <div id="btnLogin">
-                    <img src="img/icone-usuario.png" alt="Usuário" id="paginaLogin">
+                    <a href="login.html"><img src="img/icone-usuario.png" alt="Usuário" id="paginaLogin"></a>
                 </div>
             </div>
         </header>
@@ -96,6 +96,5 @@
     </section>
     <script src="js/animacoespag.js"></script>
     <script src="js/script.js"></script>
-    <script src=""></script>
 </body>
 </html>
