--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
                         <a href="sobre.html" class="hover_A">Sobre</a>
                     </div>
                 </nav>
-                <!-- <div id="pesquisar">
+                <div id="pesquisar">
+                    <img src="img/icons8-pesquisar-30.png" alt="">
                     <input type="text" name="inputPesquisar" id="inputPesquisar">
-                </div> --> <!--Adicionar pesquisar de produto-->
+                </div> <!--Adicionar pesquisar de produto-->
                 <div id="btnLogin">
+                    <a href="" id="carrinhoImg"><img src="img/icone-carrinho.png" alt="Carrinho" style="background-color: black;"></a>
+                    
                     <a href="login.html"><img src="img/icone-usuario.png" alt="Usuário" id="paginaLogin"></a>
                 </div>
             </div>
