Criação do script de login e registro

--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +17,8 @@
                 <form id="formLogin" autocomplete="on">
                     <h2>Login</h2>
                     <div>
-                        <label for="f_email">Email</label>
-                        <input type="email" name="f_email" id="f_email" placeholder="digite seu email" required autocomplete="email">
+                        <label for="f_username">Username</label>
+                        <input type="text" name="f_username" id="f_username" placeholder="digite seu username" required autocomplete="nickname">
                     </div>
 
                     <div>
@@ -26,12 +26,17 @@
                         <input type="password" name="f_password" id="f_password" minlength="6" maxlength="20" required autocomplete="current-password">
                     </div>
 
-                    <input type="submit" value="Entrar">
+                    <button id="btn_entrar">Entrar</button>
                 </form>
             </div>
             <div id="conteiner-registrar" class="conteiner ">
                 <form id="formRegistrar">
                     <h2>Registrar</h2>
+
+                    <div>
+                        <label for="f_usernameRegistrar">Username</label>
+                        <input type="text" name="f_usernameRegistrar" id="f_usernameRegistrar" placeholder="digite seu username" required autocomplete="nickname" maxlength="20">
+                    </div>
 
                     <div>
                         <label for="f_nome">Nome</label>
@@ -68,7 +73,7 @@
                         <input type="password" name="f_registroPassword" id="f_registroPassword" minlength="6" maxlength="20" required autocomplete="current-password">
                     </div>
 
-                    <input type="submit" value="Registrar">
+                    <button id="btn_registrar">Registrar</button>
                 </form>
             </div>
         </main>
@@ -82,6 +87,6 @@
             </div>
         </footer>
     </div>
-    <script src="js/paginaLogin.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
