Adicionando página de adição de produtos e script dela

--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
     </section>
     <script src="js/animacoespag.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/pesquisarproduto.js"></script>
 </body>
 </html>
