Adicionando método de adicionar ao carrinho e deletar. Faltando alguns ajustes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <input type="text" name="inputPesquisar" id="inputPesquisar">
                 </div> <!--Adicionar pesquisar de produto-->
                 <div id="btnLogin">
-                    <a href="" id="carrinhoImg"><img src="img/icone-carrinho.png" alt="Carrinho" style="background-color: black;"></a>
+                    <a id="carrinhoImg"><img src="img/icone-carrinho.png" alt="Carrinho" style="background-color: black;"></a>
                     
                     <a href="login.html"><img src="img/icone-usuario.png" alt="Usuário" id="paginaLogin"></a>
                 </div>
@@ -98,7 +98,7 @@
         </main> 
     </section>
     <script src="js/animacoespag.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="module"></script>
     <script src="js/pesquisarproduto.js"></script>
 </body>
 </html>
